cmake_minimum_required(VERSION 3.28)
project(HW3_2425A)

set(CMAKE_CXX_STANDARD 17)

add_executable(HW3_2425A
        SortedList.h
        Person.h
        Person.cpp
        Task.h
        Task.cpp
        TaskManager.h
        Main.cpp
        TaskManager.cpp
)
# Tests compilation files
#SortedList.h
#Person.h
#Person.cpp
#Task.h
#Task.cpp
#TaskManager.h
#Main.cpp
